[ANGLE - iOS] webgl/1.0.3/conformance/extensions/ext-sRGB.html is failing https://bugs.webkit.org/show_bug.cgi?id=212277

Patch by Kenneth Russell <kbr@chromium.org> on 2020-05-22
Reviewed by Dean Jackson.

Source/ThirdParty/ANGLE:

Properly translate GL_EXT_sRGB enums to ES 3.0 enums when
GL_EXT_sRGB is not supported.

* src/libANGLE/renderer/gl/formatutilsgl.cpp:
(rx::nativegl::GetNativeInternalFormat):
(rx::nativegl::GetNativeFormat):

LayoutTests:

Remove failure expectation for the layout test on iOS.

* platform/ios/TestExpectations:

Canonical link: https://commits.webkit.org/225154@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262091 268f45cc-cd09-0410-ab3c-d52691b4dbfc